US#LMLAB-327 Bootstrap 2.2.2 topbar: fixer l'alignement vertical des elements https://archidevlm.atlassian.net/browse/LMLAB-327

--- a/lm-labs-themes/src/main/resources/skin/resources/less/theme/supplyChain/specific.less
+++ b/lm-labs-themes/src/main/resources/skin/resources/less/theme/supplyChain/specific.less
@@ -184,7 +184,6 @@
 	    background-color: #444;
 	    background-color: rgba(255,255,255,.3);
 	    #font > .sans-serif(13px, normal, 1);
-	    padding: 1px 9px;
 	    color: @white;
 	    color: rgba(255,255,255,.75);
 	    border: 1px solid #111;
@@ -214,7 +213,6 @@
 	      color: @grayDark;
 	      text-shadow: 0 1px 0 @white;
 	      //border: 0;
-	      padding: 1px 9px;
 	      .box-shadow(0 0 3px rgba(0,0,0,.15));
 	    }
 	 }
@@ -225,16 +223,6 @@
     border: none;
     .border-radius(0);
     padding-right: 18px;
-}
-
-.navbar-form {
-	margin-right: -15px;
-}
-
-.navbar-form input, .navbar-form .btn {
-	margin-top: 4px;
-	margin-bottom: 0;
-	padding: 1px 9px;
 }
 
 .navbar .nav > li > a {
