--- a/lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs/specific.less
+++ b/lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs/specific.less
@@ -163,10 +163,6 @@ html>body {
     .border-radius(0);
 }
 
-.navbar-form {
-  margin-right: -15px;
-}
-
 .navbar-form input, .navbar-form .btn {
   //margin-bottom: 0;
   padding: 1px 9px;
